# Asunder

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
asunder/: __init__.py  config.py  orchestrator.py  solvers.py  types.py
asunder/algorithms/: __init__.py  community.py  core_periphery.py  louvain_modified.py  spectral.py
asunder/algorithms/signed_louvain/: __init__.py  community_detection.py  util.py
asunder/base/: __init__.py
asunder/base/algorithms/: RCCS.py  __init__.py  community.py  core_periphery.py  louvain_modified.py  modular_VFD.py  spectral.py
asunder/base/branch_and_price/: __init__.py  symmetry_detection.py
asunder/base/column_generation/: __init__.py  decomposition.py  master.py  subproblem.py
asunder/base/evaluation/: __init__.py  metrics.py
asunder/base/legacy/: __init__.py  notebook_compat.py
asunder/base/utils/: __init__.py  graph.py  partition_generation.py
asunder/base/visualization/: __init__.py  (+2 more)
asunder/case_studies/: __init__.py  circle_cutting.py  cpcong.py
asunder/column_generation/: __init__.py  decomposition.py  master.py  subproblem.py
asunder/evaluation/: __init__.py  metrics.py  runner.py
asunder/legacy/: __init__.py  notebook_compat.py
asunder/load_balancing/: __init__.py
asunder/nlbnp/: __init__.py  workflow.py
asunder/nlbp/: __init__.py
asunder/utils/: __init__.py  graph.py  partition_generation.py
asunder/visualization/: __init__.py  graphs.py  matrices.py
docs/: api.rst  conf.py  custom_methods.rst  index.rst  problem_fit.rst  requirements.txt
docs/api/: index.rst  top_level.rst
docs/getting_started/: index.rst  installation.rst  introduction.rst  quickstart.rst
docs/learn/: index.rst
docs/reference/: citation.rst  credits.rst  index.rst  license.rst  references.rst
examples/: custom_subproblem.py  nonlinear_bp.py
tests/integration/: test_case_studies_small_instances.py  test_decomposition_integration.py  test_lb.py  test_nlbnp_high_level.py
tests/regression/: test_namespace_imports.py  test_required_algorithms.py  test_review_edge_cases.py
tests/unit/: test_graph_utils.py  test_metrics.py  test_partition_generation.py
(+75 files in other folders)
